Fix results nav overlapping results

--- a/src/components/results-nav/results-nav.css
+++ b/src/components/results-nav/results-nav.css
@@ -1,11 +1,19 @@
 .results-nav {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+
+  --space-from-bottom-of-screen: 1.5rem;
+}
+
+.rn-relative {
+  position: relative;
+  padding-bottom: var(--space-from-bottom-of-screen);
+}
+
+.rn-fixed {
+  position: fixed;
+  bottom: var(--space-from-bottom-of-screen);
+  left: 0;
 }
